[package]
name = "rust-ratatui-example"
version = "0.1.0"
authors = ["Mario Zupan <mario@zupzup.org>", "D0bhareach <viacheslav.modestov@gmail.com>"]
edition = "2018"

[dependencies]
termion = { version = "2" }
serde = {version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
rand = { version = "0.8", default-features = false, features = ["std", "std_rng"] }
ratatui = { version = "0.20", default-features = false, features = ['termion'] }
thiserror = "1"
